# qt-sudoku

./: CMakeLists.txt  README.md  window.h
cmake/: CodeCoverage.cmake
src/: line_solver.cpp  line_solver.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  solver.h  sudoku.cpp  sudoku.h  window.cpp
tests/: line_solver.cpp  sudoku.cpp
